--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 			<form 
 			  id = "page1"
-			  action="second.html"
+			  action="html/second.html"
 			  method="post"
 			  autocomplete="off">
 
